css fixes for horizontal scroll bars

--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,9 @@
   --cmd-primary:#ffd700;
   --cmd-secondary:#ffd000;
 }
+* {
+  box-sizing:border-box;
+}
 html {
   font:100% / 250% "Monaco";
   padding:0;
@@ -11,7 +14,7 @@ body {
   font-size:1.35em;
   padding:0;
   margin:0;
-  xoverflow-x:hidden;
+  overflow-x:hidden;
   background-color: var(--cmd-primary);
   background: repeating-linear-gradient(
       -60deg,
@@ -168,12 +171,20 @@ aside p {
     display: inline-block;
     margin-left: -0.2em;
 }
-aside > div{ /* container voor het horizontale ding*/
-    width:100vw;
+aside > div { /* container voor het horizontale ding*/
     margin: 1em -1em 0 -1em;
     overflow-x:scroll;
+    width:100vw;
 }
-aside > div > div p{ /*de kopjes tussendoor */
+aside > div > div {
+    width:331em; /* 13*30em */
+
+}
+aside > div > div > * {
+  float:left;
+
+}
+aside > div > div p { /*de kopjes tussendoor */
     background-color: transparent;
     width: 15em;
     margin-left: 1em;
@@ -182,9 +193,7 @@ aside > div > div p{ /*de kopjes tussendoor */
     font-size: 0.7em;
     line-height: 1.8em;
 }
-aside > div > div{
-    width:450em; /* 13*30em */
-}
+
 aside q { /* de quotes */
     background-color: var(--cmd-primary);
     color:#000;
